minor alignment fix

--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -82,6 +82,7 @@ app-table-dashboard {
     }
 
     .summary-content{
+        padding:5px;
         height: 100%;
         display: flex;
         flex-direction: column;
